--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
 
 
     <!-- 顶部导航 -->
-    <div class="headerpage"></div>
+    <nav data-load="header.html"></nav>
     <!--顶部导航 over-->
     <section id="contact">
         <div id="map" style="height:650px" >map</div>
@@ -71,7 +71,7 @@
     </section><!--/#bottom-->
 
     <!--footer-->
-    <div class="footerpage"></div>
+    <nav data-load="header.html"></nav>
     <!--footer over-->
 
     <script src="js/jquery.js"></script>
@@ -87,14 +87,12 @@
     <script src="js/main.js"></script>
 
     <script>
-      $(function(){
-          /*公共部分
-           * 导航栏
-           * footer CopyRight
-           */
-          $(".headerpage").load("header.html");
-          $(".footerpage").load("footer.html");
-      });
+    $(function(){
+        $("[data-load]").each(function(){
+            $(this).load($(this).data("load"), function(){
+            });
+        });
+    })
     </script>
 </body>
 </html>
