--- a/header.html
+++ b/header.html
@@ -17,7 +17,7 @@
                     <li class="dropdown">
                       <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                               Products
-                              <!-- <b class="caret"></b> -->
+                              <b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu">
                           <li><a href="#">jmeter</a></li>
