--- a/index.html
+++ b/index.html
@@ -25,53 +25,12 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
 
+
 </head><!--/head-->
 
 <body id="home" class="homepage">
     <!-- 顶部导航 -->
-    <header id="header">
-        <nav id="main-menu" class="navbar navbar-default navbar-fixed-top" role="banner">
-            <div class="container">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo" height="57px"></a>
-                </div>
-
-                <div class="collapse navbar-collapse navbar-right">
-                    <ul class="nav navbar-nav">
-                        <li ><a href="index.html">Home</a></li>
-                        <li class="dropdown">
-                          <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                  Products
-                                  <!-- <b class="caret"></b> -->
-                            </a>
-                            <ul class="dropdown-menu">
-                              <li><a href="#">jmeter</a></li>
-                              <li><a href="#">EJB</a></li>
-                              <li><a href="#">Jasper Report</a></li>
-                              <li class="divider"></li>
-                              <li><a href="#">分离的链接</a></li>
-                              <li class="divider"></li>
-                              <li><a href="#">另一个分离的链接</a></li>
-                            </ul>
-                        </li>
-                        <li ><a href="price.html">Pricing</a></li>
-                        <li ><a href="#services">Services</a></li>
-                        <!-- <li ><a href="#portfolio">Portfolio</a></li> -->
-                        <li ><a href="#about">About</a></li>
-                        <!-- <li ><a href="#meet-team">Team</a></li>
-                        <li ><a href="#blog">Blog</a></li> -->
-                        <li ><a href="contact.html">Contact</a></li>
-                    </ul>
-                </div>
-            </div><!--/.container-->
-        </nav><!--/nav-->
-    </header><!--/header-->
+    <nav data-load="header.html"></nav>
     <!--顶部导航 over-->
     <section id="main-slider">
         <div class="owl-carousel">
@@ -1025,34 +984,13 @@
     </section><!--/#bottom-->
 
     <!--footer-->
-    <footer id="footer">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-6">
-                    &copy; 2014 Your Company. More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a>
-                </div>
-                <div class="col-sm-6">
-                    <ul class="social-icons">
-                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                        <li><a href="#"><i class="fa fa-pinterest"></i></a></li>
-                        <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-                        <li><a href="#"><i class="fa fa-behance"></i></a></li>
-                        <li><a href="#"><i class="fa fa-flickr"></i></a></li>
-                        <li><a href="#"><i class="fa fa-youtube"></i></a></li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="#"><i class="fa fa-github"></i></a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </footer><!--/#footer-->
+    <nav data-load="footer.html"></nav>
     <!--footer over-->
 
-    <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.min.js"></script>
 
+
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.js"></script>
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/mousescroll.js"></script>
     <script src="js/smoothscroll.js"></script>
@@ -1061,6 +999,13 @@
     <script src="js/jquery.inview.min.js"></script>
     <script src="js/wow.min.js"></script>
     <script src="js/main.js"></script>
-
+    <script>
+    $(function(){
+        $("[data-load]").each(function(){
+            $(this).load($(this).data("load"), function(){
+            });
+        });
+    })
+    </script>
 </body>
 </html>
