--- a/header.html
+++ b/header.html
@@ -30,9 +30,9 @@
                         </ul>
                     </li>
                     <li ><a href="price.html">Pricing</a></li>
-                    <li ><a href="#services">Services</a></li>
+                    <!-- <li ><a href="#services">Services</a></li> -->
                     <!-- <li ><a href="#portfolio">Portfolio</a></li> -->
-                    <li ><a href="#about">About</a></li>
+                    <li ><a href="about.html">About</a></li>
                     <!-- <li ><a href="#meet-team">Team</a></li>
                     <li ><a href="#blog">Blog</a></li> -->
                     <li ><a href="contact.html">Contact</a></li>
