--- a/footer.html
+++ b/footer.html
@@ -2,7 +2,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-6">
-                &copy; 2018 上海觉朴信息技术有限公司
+                &copy; 上海觉朴信息技术有限公司
             </div>
             <div class="col-sm-6">
                 <ul class="social-icons">
@@ -10,6 +10,11 @@
                     <li><a href="#"><i class="fa fa-phone"></i></a></li>
                 </ul>
             </div>
+        </div>
+        <div>
+          <div class="col-sm-12">
+            沪ICP备18028271号-1
+          </div>
         </div>
     </div>
 </footer><!--/#footer-->
