--- a/index.html
+++ b/index.html
@@ -25,141 +25,137 @@
     <link rel="apple-touch-icon-precomposed" sizes="72x72" href="images/ico/apple-touch-icon-72-precomposed.png">
     <link rel="apple-touch-icon-precomposed" href="images/ico/apple-touch-icon-57-precomposed.png">
 
-
 </head><!--/head-->
 
 <body id="home" class="homepage">
     <!-- 顶部导航 -->
-    <nav data-load="header.html"></nav>
+    <header></header>
     <!--顶部导航 over-->
     <section id="main-slider">
-        <div class="owl-carousel">
-            <div class="item" style="background-image: url(images/slider/bg1.jpeg);">
+            <div class="owl-carousel">
+                <div class="item" style="background-image: url(images/slider/bg1.jpeg);">
 
-                <div class="slider-inner">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-sm-6">
-                                <div class="carousel-content">
-                                    <h1><span>Droproblem</span> </h1>
-                                    <p class="slider_p">集成式管理应用 </p>
-                                    <p class="slider_p">简洁  易用  方便</p>
-                                    <p class="slider_p">让您的办公更加轻松</p>
-                                    <a class="btn btn-primary btn-lg" href="#">Read More</a>
+                    <div class="slider-inner">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <div class="carousel-content">
+                                        <h1><span>Droproblem</span> </h1>
+                                        <p class="slider_p">集成式管理应用 </p>
+                                        <p class="slider_p">简洁  易用  方便</p>
+                                        <p class="slider_p">让您的办公更加轻松</p>
+                                        <a class="btn btn-primary btn-lg" href="#">Read More</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
-            </div><!--/.item-->
-             <div class="item" style="background-image: url(images/slider/bg3.jpg);">
-                <div class="slider-inner">
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-sm-6">
-                                <div class="carousel-content">
-                                  <h1><span>Droproblem</span> </h1>
-                                  <a class="btn btn-primary btn-lg" href="#">Read More</a>
+                </div><!--/.item-->
+                 <div class="item" style="background-image: url(images/slider/bg3.jpg);">
+                    <div class="slider-inner">
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-sm-6">
+                                    <div class="carousel-content">
+                                      <h1><span>Droproblem</span> </h1>
+                                      <a class="btn btn-primary btn-lg" href="#">Read More</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </div>
-                </div>
-            </div><!--/.item-->
-        </div><!--/.owl-carousel-->
-    </section><!--/#main-slider-->
+                </div><!--/.item-->
+            </div><!--/.owl-carousel-->
+        </section><!--/#main-slider-->
 
-    <section id="cta" class="wow fadeIn">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-9">
-                    <h2>Premium quality free onepage template</h2>
-                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-                    </p>
-                </div>
-                <div class="col-sm-3 text-right">
-                    <a class="btn btn-primary btn-lg" href="#">Download Now!</a>
-                </div>
-            </div>
-        </div>
-    </section><!--/#cta-->
-
-    <section id="features">
-        <div class="container">
-            <div class="section-header">
-                <h2 class="section-title text-center wow fadeInDown">产品特色</h2>
-                <p class="text-center wow fadeInDown">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br> et dolore magna aliqua. Ut enim ad minim veniam</p>
-            </div>
-            <div class="row" style=“text-align:center;”>
-                <div class="col-sm-6 wow fadeInLeft" >
-                    <img class="img-responsive" src="images/main-feature.png" alt="" style="margin-top:80px">
-                </div>
-                <div class="col-sm-6">
-                    <div class="media service-box wow fadeInRight">
-                        <div class="pull-left">
-                            <i class="fa fa-cubes"></i>
-                        </div>
-                        <div class="media-body">
-                            <h4 class="media-heading">集成式</h4>
-                            <p>我们提供多种erp管理系统、解决方案，充分解决您的需求</p>
-                        </div>
+        <section id="cta" class="wow fadeIn">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-9">
+                        <h2>Premium quality free onepage template</h2>
+                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+                        </p>
                     </div>
-
-                    <div class="media service-box wow fadeInRight">
-                        <div class="pull-left">
-                            <i class="fa fa-cogs"></i>
-                        </div>
-                        <div class="media-body">
-                            <h4 class="media-heading">多平台</h4>
-                            <p>支持手机app、电脑软件、网页的使用</p>
-                        </div>
-                    </div>
-
-                    <div class="media service-box wow fadeInRight">
-                        <div class="pull-left">
-                            <i class="fa fa-users"></i>
-                        </div>
-                        <div class="media-body">
-                            <h4 class="media-heading">高共享</h4>
-                            <p>多人共享任务</p>
-                        </div>
-                    </div>
-
-                    <div class="media service-box wow fadeInRight">
-                        <div class="pull-left">
-                            <i class="fa fa-pencil"></i>
-                        </div>
-                        <div class="media-body">
-                            <h4 class="media-heading">定制化</h4>
-                            <p>根据您的需求提供定制化服务</p>
-                        </div>
+                    <div class="col-sm-3 text-right">
+                        <a class="btn btn-primary btn-lg" href="#">Download Now!</a>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section><!--/#cta-->
 
-    <section id="cta2">
-        <div class="container">
-            <div class="text-center">
-                <h2 class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="0ms"><span>MULTI</span> IS A CREATIVE HTML TEMPLATE</h2>
-                <p class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="100ms">Mauris pretium auctor quam. Vestibulum et nunc id nisi fringilla <br />iaculis. Mauris pretium auctor quam.</p>
-                <p class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="200ms"><a class="btn btn-primary btn-lg" href="#">Free Download</a></p>
-                <img class="img-responsive wow fadeIn" src="images/cta2/cta2-img.png" alt="" data-wow-duration="300ms" data-wow-delay="300ms">
+        <section id="features">
+            <div class="container">
+                <div class="section-header">
+                    <h2 class="section-title text-center wow fadeInDown">产品特色</h2>
+                    <p class="text-center wow fadeInDown">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br> et dolore magna aliqua. Ut enim ad minim veniam</p>
+                </div>
+                <div class="row" style=“text-align:center;”>
+                    <div class="col-sm-6 wow fadeInLeft" >
+                        <img class="img-responsive" src="images/main-feature.png" alt="" style="margin-top:80px">
+                    </div>
+                    <div class="col-sm-6">
+                        <div class="media service-box wow fadeInRight">
+                            <div class="pull-left">
+                                <i class="fa fa-cubes"></i>
+                            </div>
+                            <div class="media-body">
+                                <h4 class="media-heading">集成式</h4>
+                                <p>我们提供多种erp管理系统、解决方案，充分解决您的需求</p>
+                            </div>
+                        </div>
+
+                        <div class="media service-box wow fadeInRight">
+                            <div class="pull-left">
+                                <i class="fa fa-cogs"></i>
+                            </div>
+                            <div class="media-body">
+                                <h4 class="media-heading">多平台</h4>
+                                <p>支持手机app、电脑软件、网页的使用</p>
+                            </div>
+                        </div>
+
+                        <div class="media service-box wow fadeInRight">
+                            <div class="pull-left">
+                                <i class="fa fa-users"></i>
+                            </div>
+                            <div class="media-body">
+                                <h4 class="media-heading">高共享</h4>
+                                <p>多人共享任务</p>
+                            </div>
+                        </div>
+
+                        <div class="media service-box wow fadeInRight">
+                            <div class="pull-left">
+                                <i class="fa fa-pencil"></i>
+                            </div>
+                            <div class="media-body">
+                                <h4 class="media-heading">定制化</h4>
+                                <p>根据您的需求提供定制化服务</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
 
-
+        <section id="cta2">
+            <div class="container">
+                <div class="text-center">
+                    <h2 class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="0ms"><span>MULTI</span> IS A CREATIVE HTML TEMPLATE</h2>
+                    <p class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="100ms">Mauris pretium auctor quam. Vestibulum et nunc id nisi fringilla <br />iaculis. Mauris pretium auctor quam.</p>
+                    <p class="wow fadeInUp" data-wow-duration="300ms" data-wow-delay="200ms"><a class="btn btn-primary btn-lg" href="#">Free Download</a></p>
+                    <img class="img-responsive wow fadeIn" src="images/cta2/cta2-img.png" alt="" data-wow-duration="300ms" data-wow-delay="300ms">
+                </div>
+            </div>
+        </section>
 
     <!--footer-->
-    <nav data-load="footer.html"></nav>
+    <footer></footer><!--/#footer-->
     <!--footer over-->
 
-
-
-    <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+
     <script src="js/owl.carousel.min.js"></script>
     <script src="js/mousescroll.js"></script>
     <script src="js/smoothscroll.js"></script>
@@ -169,12 +165,12 @@
     <script src="js/wow.min.js"></script>
     <script src="js/main.js"></script>
     <script>
-    $(function(){
-        $("[data-load]").each(function(){
-            $(this).load($(this).data("load"), function(){
-            });
-        });
-    })
+        $(function(){
+            $("header").load('./header.html');
+            $("footer").load('./footer.html');
+            console.log('dasdasdasdas')
+        })
     </script>
+
 </body>
 </html>
